# week-5-mid-training

./: .env  .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/db/: config.rs  mod.rs  mongo_crud.rs  mongo_user_crud.rs  poll_crud.rs  user_crud.rs
backend/src/handler/: auth.rs  mod.rs  poll.rs
backend/src/handler/middleware/: auth_middleware.rs
backend/src/models/: auth_state.rs  mod.rs  poll.rs  user.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/polls/[pollId]/: page.tsx
frontend/src/app/polls/manage/: page.tsx
frontend/src/app/polls/new/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/stores/: usePollStore.ts  useUserStore.ts
secret_sharing_algos/: Cargo.toml
secret_sharing_algos/src/: main.rs
src/: main.rs  startup.rs
src/db/: config.rs  mod.rs  mongo_crud.rs  poll_crud.rs
src/handler/: auth.rs  mod.rs  poll.rs
src/models/: jwt.rs  mod.rs
src/static/: index.html
