[package]
name = "week-5-mid-training"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = '1.0'
webauthn-rs = { version = "0.4", features = [
    "danger-allow-state-serialisation",
] }
log = "~0.4"
actix-web = "4"
env_logger = "0.10"
dotenv = "0.15"
uuid = { version = "1.0", features = ["serde", "v4"] }
actix-cors = "0.6" # make sure to specify the correct version
async-trait = { version = "0.1" }
anyhow = { version = "~1" }
chrono = { version = "0.4", features = ["serde"] }
once_cell = { version = ">=1.18" }
rand = { version = "*" }
# Nicer error management
thiserror = { version = "~1" }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
# Serve static file. Used to serve wasm
actix-files = { version = "~0.6" }
futures = "0.3"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
] } # Async runtime
mongodb = { version = "2.2.0", features = ["tokio-runtime"] }
